--- a/Analysis/CH2.tex
+++ b/Analysis/CH2.tex
@@ -70,9 +70,7 @@
         and factoring finishes the proofs. 
     \end{proof}
 
-    Results:
-
-    maximal intervals 
+    \section{Topology}
     
     \begin{defn}
         Given a subset $S \subset \R$, we say that $S$ is a maximal interval if 
@@ -109,10 +107,8 @@
 
     
     \begin{proof}
-        If two maximal intervals share an element $x$, $I_x$ and $I_y$ by maximality we have, $I_x \cup I_y = I_x$ and 
-        $I_x \cup I_y = I_y$ so they are disjoint and form an open cover of $S$. 
-
-        need to think about this part of the argument more
+        let $x \in S$ be in the maximal interval $I_x$, clearly the union covers $S$. Now if $I_x$ and $I_y$ both contain $x$, then their union 
+        $I_x \cup I_y$ is a maximal interval containg $I_x$ and $I_y$, thus $I_x = I_x \sup I_y = I_y$. So they are disjoint. 
 
         To show that this collection is countable, consider the countable collection of rationals 
         \[\Q = \{x_1, x_2, \dots\}\]
@@ -120,7 +116,12 @@
         intervals to $\N$ which takes the interval $I_n$ to $n$ when $n$ is the minimal index in $I$; if $\phi(I_m) = \phi(I_n) = n$ then they must share the rational whose index is $n$ so 
         $\phi$ is an injection into the natural numbers.   
     \end{proof}
-    bolzano-weierstrass 
+    
+
+    \begin{rem}
+        This representation is unique, thus an open interval $I$ only has one representation as a union of maximal intervals, namely iteself; it follows 
+        that $I$ cannot be written as a union of open intervals and as such is connected. 
+    \end{rem}
 
     
     
@@ -148,19 +149,42 @@
 
     \begin{proof}
         We will use the Bolzano-weierstrass thm, since if the $Q_i$'s are finite, then the result is clear since the are decreasing and non-empty. 
-        Now, since we may assume that they are infinte and bounded, 
+        Now, since we may assume that they are infinte and bounded, Let $A = \{x_1, x_2, \dots, \}$ where $x_k \in Q_k$. Since $A$ is contained in $Q_1$ 
+        it is bounded, and since it is infinte, we may apply the Bolzano-weierstrass theorm to produce a limit point of $A$, $\xi$. We want to show that 
+        \[\xi \in \cap_{i =1}^\infty Q_i\]
+        Since $\xi$ is a limit point, every nbhd intersects $A$ in infinitely many points. But then due to the decrseasing nature of the $Q_i$'s, 
+        if a nbhd around $\xi$ contains infinitely many points of $A$, it must contain infinitely many points of some $Q_k$, since each $Q_k$ contains all but a fininte number of points in $A$. Thus $\xi$ is a limit point 
+        of each $Q_k$ and since they are closed, it must belong to each $Q_k$. 
     \end{proof}
 
     \begin{thm}[Lindelof Covering Theorem]
         If $S$ is a closed and bounded subset of $\R^n$, then every open cover $F$ contains a countable subcover. 
     \end{thm}  
 
+    \begin{proof}
+        
+    \end{proof}
+
     The biggest use the the above theorem is to help us prove and even stronger result about closed and bounded sets in $\R^n$.
 
     \begin{thm}[Hine-Borel Theorem]
-        If $S \subset \R$ is closed and bounded, then every open cover $F$ of $S$ contains 
+        If $A \subset \R$ is closed and bounded, then every open cover $F$ of $A$ contains 
         a finite subcover. 
     \end{thm}
+
+    \begin{proof}
+        Let $F$ be an open cover for $A$, then by lindelof, we know that there is a countable subcover, 
+        $\{I_1, I_2, \dots \}$. Now define 
+        \[S_m  = \cup_{i = 1}^m I_i\]
+        we want to show that at some point $A \subset S_m$ for some $m$. Observe that since $S_m$ is open 
+        $\R^n \setminus S_m$ is closed and as such, $A \cap (\R^n \setminus S_m)$ is closed. Now Define $Q_1 = A$ and for $m > 1$ 
+        \[Q_m = A \cap (\R^n \setminus S_m)\]
+        When $Q_m = \varnothing $ then we are done. Since the $S_m$ are increasing, $Q_m$ are decreasing, since $A$ is bounded so we know that $Q_m$ is bounded, and 
+        we also know that $Q_m$ is closed. Now if we assume that $Q_m$ is never emtpy we can apply the cantor intersectin theorem to get a point 
+        \[x \in \cap_{i = 1}^\infty Q_m\]
+        That is, $x \in A$, and $x \in R^n \setminus S_m$, Then $x \notin S_m$ for all $m \in \N$ but this contradics the fact that $S_m$ is an open cover. 
+        Hence at some point $Q_m$ must be empty. 
+    \end{proof}
 
     \begin{defn}
         Let $X$ be a topological space, $S \subset X$ is compact if every open cover contains a finite subcover.
@@ -171,4 +195,24 @@
     generalize to abstract spaces since boundedness is not a topological property (see topology notes). 
 
 
+    \begin{thm}
+        If $A \subset \R^n$ is compact, then it is closed and bounded, equivalently, every infinte subset of $A$ contains a limit point in $A$.  
+    \end{thm}
+
+    \begin{proof}
+        Suppose that $A$ is compact, then for $x \in A$, $B(x, r_i)$, with $r_i = i \in \N$ is an open cover hence it contains a finite subcover. Taking the largest radii shows $A$ is bounded. 
+        Now we must show that $A$ is closed. Suppose there is a limit point of $A$, $y$ which is not contained in $A$. Now for each $x \in A$ define $r_x = \frac{1}{2}\|x-y\|$, 
+        each $r_k$ is positive since $y \notin A$, now the collection of open balls, $B(x, r_x)$ (where $x$ ranges over $A$) form an open cover and so there exists a finite subcover, $B(x_1, r_1), \dots, B(x_n, r_n)$. 
+        Now choose $r = min\{r_1, \dots, r_n\}$ and consider $B(y, r)$; if $x_0 \in B(y, r)$, then for any $x \in A$
+        \[ \|x - y\| \leq \|x-x_0\| + \|x_0 - y \|  \]
+        so 
+        \[\| x - y \| - \| x_0 - y\| \leq \| x - x_0 \|\]
+        and since $\|x - y \| = 2r_x \geq r$ and $\|x_0 - y \| < r$, then $\|x - x_0 \| \geq 2r_x - \|x_0 - y \| > r_x$ so that $x_0$ is not in the ball $B(x, r_x)$ and thus 
+        $B(y, r)$ contains no points in any $B(x, r_x)$. Hence we have found a nbhd of $y$ disjoint from $A$; contradicting the assumption that $y$ is a limit point of $A$. 
+
+    \end{proof}
+
+
+    \section{Metric Spaces}
+    This is covered in greater depth in the topology lectures. 
 \end{chapter}
