--- a/Topology/HW_preamble.tex
+++ b/Topology/HW_preamble.tex
@@ -12,6 +12,8 @@
 \newcommand{\eps}{\varepsilon}
 \newcommand{\ssd}{\bigtriangleup}
 \newcommand{\pow}{\mathcal{P}}
+\def\cA{\overline{A}
+\def\cB{\overline{B}}}
 
 % TODO: replace these with your information
 % TODO: replace these with your information
