--- a/Topology/CH1.tex
+++ b/Topology/CH1.tex
@@ -620,7 +620,11 @@
    We have more to say about box and product topologies when we talk about metric spaces. 
 
    \newpage
+   Let $f_i(x) = a_ix + b_i$, then we can write $h$ 
+   as $h(x) = ((f_1 \circ \pi_1)(x), (f_2 \circ \pi_2)(x), \dots )$, then each coordinate function is continuous since it is the composistion of two continuous functions. Then since maps into products under the product topology are continuous 
+   if and only if the coordinate functions are continuous, we see that $h$ is a continuous function. To see that the inverse is continuous, fist note $h^{-1}$ is given by 
    
+   so that each component function is continuous, we can now do the same thing again to get that the inverse is continuous. 
    \newpage 
 
    \section{Metric spaces I }
