--- a/Analysis/HW2.tex
+++ b/Analysis/HW2.tex
@@ -11,7 +11,7 @@
         All numbers of the form $\frac{1}{n}$ for $n \in \N$ 
 
         ans: There is only one accumulation point, $0$. Since 
-        by the archimedean property, each nbhd around $0$ will contain 
+        by the archimedean property, each neighborhood around $0$ will contain 
         a point of the form $\frac{1}{k}$ for a large enough choice of $k$. 
         The set is not closed since it does not contain all its limit points, 
         it is also not open since every point is isolated. 
@@ -21,11 +21,11 @@
 
         Ans: Let $A = \{2^{-n} + 5^{-m} \, | \, n, m \in \N \}$. 
        $A$ has accumulation points, $s = \frac{1}{2^{m}}$ and $t = \frac{1}{5^{n}}$ for $n,m \in \N$
-       Consider a nbhd $B(s, \epsilon)$ for  $\epsilon > 0$ around $\frac{1}{2^{-m}}$, then there exists $N \in \N$ such that $\frac{1}{n} < \epsilon$ 
+       Consider a neighborhood $B(s, \epsilon)$ for  $\epsilon > 0$ around $\frac{1}{2^{-m}}$, then there exists $N \in \N$ such that $\frac{1}{n} < \epsilon$ 
        by the archimedean property. Then $\frac{1}{5^n} < \epsilon$ for $n > N$. Hence $s + 5^{-n} \in B(s, \epsilon)$; 
        so $s = \frac{1}{2^m}$ is a limit point for every choice of $m \in \N$. 
 
-       Now fix a nbhd $B(t, \epsilon)$, since $n > N \implies \frac{1}{n} < \epsilon$ we again 
+       Now fix a neighborhood $B(t, \epsilon)$, since $n > N \implies \frac{1}{n} < \epsilon$ we again 
        have $\frac{1}{2^n} < \frac{1}{n} < \epsilon$ so $t + \frac{1}{2^n} \in B(t, \epsilon)$, 
        so that $t$ is a limit point. 
 
@@ -54,7 +54,7 @@
 
         Ans: 
         All limit points are of the form $\frac{1}{n}$ for any $n \in \N$ or $\frac{i}{m}$ for any $m \in \N$. 
-        For an element of the form $\frac{1}{n}$ fix an arbitrary epsilon nbhd around it the by choosing $m$ such that 
+        For an element of the form $\frac{1}{n}$ fix an arbitrary epsilon neighborhood around it the by choosing $m$ such that 
         $\frac{1}{m} < \epsilon$ we will have $\frac{1}{n} + \imath \frac{1}{m}$ in the epsilon ball. And the argument for 
         elements of the form $\frac{\imath}{m}$ is similar. Since the set of complex numbers of the desired form does not contain all of 
         its limit points it is not closed. And again it is a subset of the rationals in $\C$ so it is not open. 
@@ -105,7 +105,7 @@
             Then for any point $z \in B((a, b), l)$, by the triangle inequality we have 
             \[ \|z - (x, y) \| \leq \|z - (a, b) \| + \| (a, b) - (x, y) \| \]
             \[ < r - h + h = r\]
-            Hence $z \in B((x, y), r)$. Thus there is a  nbhd around $(a, b)$ completely contained in $B((x, y), r)$, and thus $(a, b)$ is an interior 
+            Hence $z \in B((x, y), r)$. Thus there is a  neighborhood around $(a, b)$ completely contained in $B((x, y), r)$, and thus $(a, b)$ is an interior 
             point. Since $(a, b)$ was arbitrary it follows that every point is interior and so the ball is open. Then for every point $(x, y)$ with $x > 0$, 
             we have a ball with all points having the same property, and thus the original set in question is open.
         \end{proof}
@@ -133,9 +133,9 @@
         $S^\prime$ is closed in $\R^n$; that is $(s^\prime)^\prime \subset S^\prime$ 
 
         \begin{proof}
-            Let $x$ be a limit point of the derived set of $S$. Then every nbhd of $x$ contains a limit 
-            point of $S$. Since a nbhd is by definition open, there is a another nbhd around each limit point 
-            of $S$ contained in the nbhd around $x$, these then must contain elements of $S$, and so every nbhd around $x$ 
+            Let $x$ be a limit point of the derived set of $S$. Then every neighborhood of $x$ contains a limit 
+            point of $S$. Since a neighborhood is by definition open, there is a another neighborhood around each limit point 
+            of $S$ contained in the neighborhood around $x$, these then must contain elements of $S$, and so every neighborhood around $x$ 
             contains points of $S$ and as such $x \in S^\prime$. As desired. 
         \end{proof}
 
@@ -143,8 +143,8 @@
         If $S \subset T$, then $S^\prime \subset S^\prime$ 
 
         \begin{proof}
-            Suppose $x$ is a limit point of $S$, then every nbhd contains a point of $S$, 
-            since $S \subset T$, each nbhd around $x$ contains a point of $T$, so $x$ is a limit point of $T$. 
+            Suppose $x$ is a limit point of $S$, then every neighborhood contains a point of $S$, 
+            since $S \subset T$, each neighborhood around $x$ contains a point of $T$, so $x$ is a limit point of $T$. 
 
         \end{proof}
 
@@ -152,14 +152,14 @@
         $(S \cup T)^\prime = S^\prime \cup T^\prime$
 
         \begin{proof}
-            If $x \in (S \cup T)^\prime$ then every nbhd intersects $S \cup T$, 
-            then we prove that every nbhd either intersects $S$ or every nbhd intersects $T$. Suppose 
+            If $x \in (S \cup T)^\prime$ then every neighborhood intersects $S \cup T$, 
+            then we prove that every neighborhood either intersects $S$ or every neighborhood intersects $T$. Suppose 
             not, then there exists $U, V$, open around $x$ where $U$ intersects $S$ but not $T$ is the reverse holds for $V$. 
-            Then taking the intersection $U \cap V$ gives a nbhd around $x$ which intersects $S \cup T$ nowhere, a contradiction. 
-            Then WLOG assume every nbhd intersects $S$, then $x \in S^\prime \cup T^\prime$. 
+            Then taking the intersection $U \cap V$ gives a neighborhood around $x$ which intersects $S \cup T$ nowhere, a contradiction. 
+            Then WLOG assume every neighborhood intersects $S$, then $x \in S^\prime \cup T^\prime$. 
 
             The converse is easy since if $x \in S^\prime \cup T^\prime$ then either $x$ is a limit point of $S$ or $T$. 
-            if $x$ is a limit point of $S$, then every nbhd of $x$ must intersect $S \cup T$ so that $x \in (S \cup T)^\prime$. 
+            if $x$ is a limit point of $S$, then every neighborhood of $x$ must intersect $S \cup T$ so that $x \in (S \cup T)^\prime$. 
 
         \end{proof}
 
@@ -177,8 +177,8 @@
 
         \begin{proof}
             Taking an element in the complement $x \in \R^n \setminus \overline{S}$, we know that $x$ cannot adhere to $S$, 
-            so there must exists a nbhd of $x$ which does not contain a point of $S$, And if a nbhd of $x$ contained a point of $s^\prime$, 
-            then we already know that would imply $x$ is a limit point which would be a contradiction. Hence  a nbhd around $x$ does not 
+            so there must exists a neighborhood of $x$ which does not contain a point of $S$, And if a neighborhood of $x$ contained a point of $s^\prime$, 
+            then we already know that would imply $x$ is a limit point which would be a contradiction. Hence  a neighborhood around $x$ does not 
             contain a point of $S \cup S^\prime = \overline{S}$, and thus is an interior point. Since $x$ was arbitrary, we have that 
             $\R^n \setminus \overline{S}$ is open and so $\overline{S}$ is closed. 
 
@@ -186,11 +186,11 @@
 
         \questionpart 
         Let $x$ be in the intersection of all closed sets containing $S$. Now suppose that $x \notin S$  and that $x$ is not a limit point, 
-        then fix a nbhd $U$ around $x$ that doesn't intersect $S$. Then $\R^n \setminus U$ is a closed set containing $S$ which does not contain $x$, a contradiction. 
+        then fix a neighborhood $U$ around $x$ that doesn't intersect $S$. Then $\R^n \setminus U$ is a closed set containing $S$ which does not contain $x$, a contradiction. 
         Hence either $x \in S$ or $x$ is a limit point and in either case $x$ is in the closure of $S$. 
 
         Now let $x$ be in the closure. Suppose there existed a closed set $C \supset A$ that did not contain $x$. 
-        then $\R^n - C$ is an open nbhd of $x$ which does not intersect $A$ so that $x$ is not in the closure; a contradiction. 
+        then $\R^n - C$ is an open neighborhood of $x$ which does not intersect $A$ so that $x$ is not in the closure; a contradiction. 
         hence $x$ must be in every closed set containing $A$ and then it follows that $x$ will be in the intersection. 
         \begin{proof}
             
@@ -200,13 +200,13 @@
     \question 
     Prove that $\overline{A \cap B} \subset \overline{A} \cap \overline{B}$ and $A \cap \overline{B} \subset \overline{A \cap B}$ if $A$ is open. 
     \begin{proof}
-        Let $x \in \overline{A \cap B}$ then every neighborhood of $x$, intersects $A$ and $B$. Since every nbhd intersects $A$, 
-        $x \in \overline{A}$ and since every nbhd intersects $B$, $x \in \overline{B}$. Hence $x \in \overline{A} \cap \overline{B}$. 
+        Let $x \in \overline{A \cap B}$ then every neighborhood of $x$, intersects $A$ and $B$. Since every neighborhood intersects $A$, 
+        $x \in \overline{A}$ and since every neighborhood intersects $B$, $x \in \overline{B}$. Hence $x \in \overline{A} \cap \overline{B}$. 
 
-        Let $A$ be open and let $x \in A \cap \overline{B}$. Then there exists a nbhd $U$ of $x$ completely contained in $A$, since $A$ is open. 
-        Then for an arbitrary nbhd $V$ of A, taking $W = U \cap V \subset V$ is completely contained in $A$. But since $x \in \overline{B}$, 
-        $W$ must also contain a point of $B$ that lies in $A$. Hence $W$ is a nbhd around $x$ that contains a point of $A \cap B$. 
-        Since $W \subset V$, it follows that the arbitrary nbhd $V$ also contains a point of $A \cap B$. Thus $x \in \overline{A \cap B}$. 
+        Let $A$ be open and let $x \in A \cap \overline{B}$. Then there exists a neighborhood $U$ of $x$ completely contained in $A$, since $A$ is open. 
+        Then for an arbitrary neighborhood $V$ of A, taking $W = U \cap V \subset V$ is completely contained in $A$. But since $x \in \overline{B}$, 
+        $W$ must also contain a point of $B$ that lies in $A$. Hence $W$ is a neighborhood around $x$ that contains a point of $A \cap B$. 
+        Since $W \subset V$, it follows that the arbitrary neighborhood $V$ also contains a point of $A \cap B$. Thus $x \in \overline{A \cap B}$. 
 
     \end{proof}
 \end{document}
