--- a/Analysis/HW2.tex
+++ b/Analysis/HW2.tex
@@ -177,7 +177,7 @@
 
         \begin{proof}
             Taking an element in the complement $x \in \R^n \setminus \overline{S}$, we know that $x$ cannot adhere to $S$, 
-            so there must exists a neighborhood of $x$ which does not contain a point of $S$, And if a neighborhood of $x$ contained a point of $s^\prime$, 
+            so there must exist a neighborhood of $x$ which does not contain a point of $S$, And if a neighborhood of $x$ contained a point of $s^\prime$, 
             then we already know that would imply $x$ is a limit point which would be a contradiction. Hence  a neighborhood around $x$ does not 
             contain a point of $S \cup S^\prime = \overline{S}$, and thus is an interior point. Since $x$ was arbitrary, we have that 
             $\R^n \setminus \overline{S}$ is open and so $\overline{S}$ is closed. 
