--- a/Analysis/HW2.tex
+++ b/Analysis/HW2.tex
@@ -57,7 +57,7 @@
         For an element of the form $\frac{1}{n}$ fix an arbitrary epsilon neighborhood around it the by choosing $m$ such that 
         $\frac{1}{m} < \epsilon$ we will have $\frac{1}{n} + \imath \frac{1}{m}$ in the epsilon ball. And the argument for 
         elements of the form $\frac{\imath}{m}$ is similar. Since the set of complex numbers of the desired form does not contain all of 
-        its limit points it is not closed. And again it is a subset of the rationals in $\C$ so it is not open. 
+        its limit points it is not closed. And again it is a subset of the rationals in $C$ so it is not open. 
         
         \questionpart
         All points $(x, y) $ such that $x^2 - y^2 < 1$ 
